[project]
name = "gemini-file-search-tool-mgmt"
version = "0.1.0"
description = "Local Streamlit app for managing Gemini API File Search Stores with Blue/Green refresh and RAG chat."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.55.0",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
]
